@@ -1,4 +1,8 @@
 
+2009-12-20 Ugo Pattacini <ugo.pattacini@iit.it>
+	   * iKinFwd.h,.cpp: iKinLimb class extended with new methods
+                         for creating limb from a list of links properties.
+
 2009-12-18 Ugo Pattacini <ugo.pattacini@iit.it>
 	   * iKinFwd.h,.cpp: iCubInertialSensor class added
 
